Mon Aug 16 21:50:02 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * NEWS:

          Added entry for max_blocking_time default value change.

Mon Aug 16 20:56:09 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * dds/DCPS/Service_Participant.cpp:

          Corrected the default DataWriterQos reliability max_blocking_time
          to be 100ms to be consistent with spec 1.2.

Mon Aug 16 17:33:37 UTC 2010  Brian Johnson  <johnsonb@ociweb.com>

        * performance-tests/DCPS/InfoRepo_population/run_test.pl:

          If sync.ior existed prior to run_test.pl being run, the
          script would continue on before SyncServer actually created
          its own sync.ior file, now sync.ior is removed prior to
          starting the SyncServer.

Mon Aug 16 17:30:29 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAO_all.mwc:

          Should have been updated along with the latest mwc updates.

        * README:

          More documentation updates for "configure".

Mon Aug 16 16:31:09 UTC 2010  Yan Dai  <dai_y@ociweb.com>

        * tests/DCPS/Ownership/DataReaderListener.cpp:

          Corrected num_messages_per_writer.

Mon Aug 16 15:49:47 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DDS_TAO.mwc:
        * DDS_no_tests.mwc:

          Build the DevGuideExamples even in a "no tests" configuration.

        * INSTALL:
        * NEWS:
        * README:

          Documented the configure script.

Mon Aug 16 14:51:06 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DCPS/Messenger/Publisher.cpp:

          Updated to match DevGuide text.  Removed unnecessary string_dups.

Fri Aug 13 22:23:08 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * configure:

          Add CC, CXX, LD variables to platform_macros.GNU if needed.

Fri Aug 13 22:10:12 UTC 2010  Adam Mitz  <mitza@ociweb.com>

        * README:

          Updated compilers.

        * configure:

          Perl bug fix.

Fri Aug 13 22:02:16 UTC 2010  Adam Mitz  <mitza@ociweb.com>
