@@ -1,8 +1,8 @@
-This is OpenDDS version 2.1.3, released Fri Jun 18 20:15:06 UTC 2010.
+This is OpenDDS version 2.2, released Tue Aug 17 18:43:58 UTC 2010.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 2.1.3
+    OpenDDS VERSION: 2.2
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
