@@ -1,4 +1,4 @@
-This is OpenDDS version 2.1.3, released Fri Jun 18 20:15:06 UTC 2010.
+This is OpenDDS version 2.2, released Tue Aug 17 18:43:58 UTC 2010.
 
 This software is open source and free of licensing fees.  See the
 LICENSE file (in this directory) for license details.
