@@ -1,3 +1,7 @@
+Tue Aug 17 18:43:58 UTC 2010  Yan Dai  <dai_y@ociweb.com>
+
+        * OpenDDS version 2.2 released.
+
 Mon Aug 16 21:50:02 UTC 2010  Yan Dai  <dai_y@ociweb.com>
 
         * NEWS:
